@@ -1,3 +1,9 @@
+DNAnexus Upload Agent 1.4.0 <support@dnanexus.com>, 2013-Jul-1
+--------------------------------------------------------------
+  * UA should now use full file path for creating the file signature
+    (which in turn is used for resuming uploads)
+  * This version of UA is not released on wiki.
+
 DNAnexus Upload Agent 1.3.1 <support@dnanexus.com>, 2013-May-10
 ---------------------------------------------------------------
   * Bug fix: Libcurl silently added the header: "Content-Type: application/x-www-form-urlencoded"
